@@ -11,7 +11,7 @@
 	  instead of a fixed list of compiler (version) defines
 	* flag.def, cobc.c, codegen.c: disabled -fif-cutoff (cb_if_cutoff,
 	  gen_if_level), can be re-activated by -DCOBC_HAS_CUTOFF_FLAG (likely
-	  to be removed completely later)
+	  to be removed completely later), see bug #456
 
 2017-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
